[UPD] fix of a small alignment issue in tablet mode

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,6 +17,11 @@
         font-size: 30px;
     }
 
+    .quick-notes ul{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
     .quick-notes li{
         display: inline-block;
         width: 30%
